Completed login function

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -4,3 +4,7 @@ routes.login.defaults.module = planner
 routes.login.defaults.controller = auth
 routes.login.defaults.action = login
 
+routes.planner.route = :controller/:action/*
+routes.planner.defaults.module = planner
+routes.planner.defaults.controller = index
+routes.planner.defaults.action = index
