modified database structure. modified layout.

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -4,6 +4,11 @@ routes.login.defaults.module = planner
 routes.login.defaults.controller = auth
 routes.login.defaults.action = login
 
+routes.logout.route = logout
+routes.logout.defaults.module = planner
+routes.logout.defaults.controller = auth
+routes.logout.defaults.action = logout
+
 routes.planner.route = :controller/:action/*
 routes.planner.defaults.module = planner
 routes.planner.defaults.controller = index
