added calendar module and review on request page

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -5,6 +5,11 @@ routes.planner.defaults.module = planner
 routes.planner.defaults.controller = index
 routes.planner.defaults.action = index
 
+routes.calendar.route = calendar/:controller/:action/*
+routes.calendar.defaults.module = calendar
+routes.calendar.defaults.controller = index
+routes.calendar.defaults.action = index
+
 routes.login.route = login
 routes.login.defaults.module = planner
 routes.login.defaults.controller = auth
